@@ -2431,6 +2431,7 @@ LOCAL void collectorThreadCode(CreateInfo *createInfo)
 
   AutoFreeList       autoFreeList;
   Dictionary         duplicateNamesDictionary;
+  DatabaseId         databaseId;
   String             name;
   Dictionary         hardLinksDictionary;
   Errors             error;
@@ -2478,9 +2479,8 @@ union { void *value; HardLinkInfo *hardLinkInfo; } data;
       AUTOFREE_ADD(&autoFreeList,&continuousDatabaseHandle,{ Continuous_close(&continuousDatabaseHandle); });
 
       // process entries from continuous database
-      while (   (createInfo->failError == ERROR_NONE)
-             && !isAborted(createInfo)
-            )
+      databaseId = DATABASE_ID_NONE;
+      do
       {
         // pause
         pauseCreate(createInfo);
@@ -2489,7 +2489,7 @@ union { void *value; HardLinkInfo *hardLinkInfo; } data;
         error = Continuous_getEntry(&continuousDatabaseHandle,
                                     createInfo->jobUUID,
                                     createInfo->scheduleUUID,
-                                    NULL,  // databaseId
+                                    &databaseId,
                                     name
                                    );
         if (error != ERROR_NONE)
@@ -2499,7 +2499,7 @@ union { void *value; HardLinkInfo *hardLinkInfo; } data;
         }
 
         // check if file still exists
-        if (String_isEmpty(name) || !File_exists(name))
+        if ((databaseId == DATABASE_ID_NONE) || !File_exists(name))
         {
           continue;
         }
@@ -2778,6 +2778,10 @@ union { void *value; HardLinkInfo *hardLinkInfo; } data;
 
         // free resources
       }
+      while (   (createInfo->failError == ERROR_NONE)
+             && !isAborted(createInfo)
+             && (databaseId != DATABASE_ID_NONE)
+            );
 
       // close continuous database
       Continuous_close(&continuousDatabaseHandle);
