@@ -5,6 +5,11 @@
   * bar-index: fixed wrong counted lost entries without
     fragments
   * log crashes into log file
+  * avoid overflow of internal error history which could
+    result in reporting the wrong error information
+  * fixed race condition in database lock info in debug
+    version
+  * fixed possible infinite loop in continuous backup
   * BARControl: added option --info
   * BARControl: fixed list directory entries on insufficient
     permission
